add my paragraphe

--- a/index.html
+++ b/index.html
@@ -27,5 +27,11 @@
   <body>
     <!-- La balise <h1> affiche un titre de niveau 1 dans le corps de la page, il s'agit du titre principal. Il ne peut y en avoir qu'un. Il existe 6 niveaux de titre. -->
     <h1>Partie 01 - Exercice 01</h1>
+
+    <!-- La balise <p> affiche un paragraphe de texte dans le corps de la page, il contient ici des instructions pour la tâche demandée -->
+    <p>
+      Créer une page HTML qui affiche un titre au niveau du bandeau/onglet de la
+      fenêtre du navigateur, le même titre dans le document et un paragraphe.
+    </p>
   </body>
 </html>
